# libkeyfinder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  KeyFinderConfig.cmake.in  LibKeyFinder.pro  README.md  annotated.html  audiodata_8h_source.html  binode_8h_source.html  chromagram_8h_source.html  chromatransform_8h_source.html  chromatransformfactory_8h_source.html  classKeyFinder_1_1AudioData-members.html  classKeyFinder_1_1AudioData.html  classKeyFinder_1_1Binode-members.html  classKeyFinder_1_1Binode.html  classKeyFinder_1_1ChromaTransform-members.html  classKeyFinder_1_1ChromaTransform.html  classKeyFinder_1_1ChromaTransformFactory-members.html  classKeyFinder_1_1ChromaTransformFactory.html  classKeyFinder_1_1ChromaTransformFactory_1_1ChromaTransformWrapper-members.html  classKeyFinder_1_1ChromaTransformFactory_1_1ChromaTransformWrapper.html  classKeyFinder_1_1Chromagram-members.html  classKeyFinder_1_1Chromagram.html  classKeyFinder_1_1Exception-members.html  classKeyFinder_1_1Exception.html  classKeyFinder_1_1FftAdapter-members.html  classKeyFinder_1_1FftAdapter.html  classKeyFinder_1_1InverseFftAdapter-members.html  classKeyFinder_1_1InverseFftAdapter.html  classKeyFinder_1_1KeyClassifier-members.html  classKeyFinder_1_1KeyClassifier.html  classKeyFinder_1_1KeyFinder-members.html  classKeyFinder_1_1KeyFinder.html  classKeyFinder_1_1LowPassFilter-members.html  classKeyFinder_1_1LowPassFilter.html  classKeyFinder_1_1LowPassFilterFactory-members.html  classKeyFinder_1_1LowPassFilterFactory.html  classKeyFinder_1_1LowPassFilterFactory_1_1LowPassFilterWrapper-members.html  classKeyFinder_1_1LowPassFilterFactory_1_1LowPassFilterWrapper.html  (+32 more)
.github/workflows/: build-and-test.yml
cmake/: FindFFTW3.cmake
docs/: Doxyfile  Introduction.txt
examples/: CMakeLists.txt  basic.cpp
packaging/: KeyFinderConfig.cmake.in  libkeyfinder.pc.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  pages_0.js  searchdata.js
src/: audiodata.h  binode.h  chromagram.h  chromatransform.h  chromatransformfactory.h  constants.h  exception.h  fftadapter.h  keyclassifier.h  keyfinder.h  lowpassfilter.h  lowpassfilterfactory.h  spectrumanalyser.h  temporalwindowfactory.h  toneprofiles.h  windowfunctions.h  workspace.h
tests/: CMakeLists.txt  _testhelpers.h  main.cpp
